# networka

./: .actignore  .actrc  .env.example  .gitignore  .lychee.toml  .pre-commit-config.yaml  .prettierignore  .ruffignore  .secrets.baseline  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINDINGS.md  GOVERNANCE.md  README.devcontainer.md  README.md  SECURITY-SCAN-REPORT.md  SECURITY.md  TODO_IDEAS.md  Taskfile.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.claude/agents/: code-sentinel.md  critical-thinking.md  gilfoyle.md  principal-engineer.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  devcontainer.relaxed.json  docker-compose.yml
.devcontainer/docker-in-docker/: devcontainer.json
.devcontainer/docker-outside-of-docker/: devcontainer.json
.devcontainer/scripts/: export-outputs.sh  post-create.sh  post-start.sh  seed-env.sh  setup-atuin.sh  setup-python-env.sh  test-networking-tools.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md  support.md
.github/instructions/: code-review-generic.instructions.md
.github/prompts/: read_instructions.prompt.md  session-handoff.prompt.md
.github/workflows/: ci.yml  codeql.yml  container.yml  docs.yml  quality-checks.yml  release.yml  test-publish.yml
.specify/memory/: constitution.md
attic/cli/: __init__.py
attic/cli_config/: __init__.py  command_config.py  help_formatter.py  metadata.py  typer_integration.py
attic/src-old/network_toolkit/: config.py
backups/: index.html
clabs/: s3n.clab.yml  s3n.clab.yml.annotations.json
config/: config.yml  devices.yml  groups.yml  sequences.yml
config/examples/: README.md  multi-site-example.md  nokia_srlinux_example.yml
config/examples/devices/: devices.csv  production.yml
config/examples/groups/: groups.csv  production.yml
config/sequences/: .gitkeep
configuration/: index.html
development/: index.html
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.old  README.md  docker-compose.yml  entrypoint.sh
docs/: LLM_TASK_NOTES.md  adding-gifs-guide.md  adding-platforms.md  backups.md  configuration.md  csv-configuration.md  development.md  docker.md  environment-variables.md  file_upload.md  getting-started.md  index.md  interactive-credentials.md  ip-address-support.md  multi-vendor-support.md  nornir-inventory.md  platform-compatibility.md  pypi-setup.md  running-commands.md  scrapli-platform-expansion-plan.md  shell-completion.md  ssh-config-sync.md  tmux-ssh.md  transport.md  troubleshooting.md
docs/.generated/: platform_support_table.md  vendor_list.md
docs/assets/javascripts/: extra.js
docs/development/: platform-registry-explanations.md  platform-registry-implementation-plan.md  platform-registry-summary.md
docs/overrides/: home.html
docs/reference/: api.md  cli.md  introspection.md
docs/vendors/: index.md
environment-variables/: index.html
examples/user_sequences/: index.html
file_upload/: index.html
getting-started/: index.html
helper_scripts/: demo_interactive_auth.py  demo_ip_functionality.py  demo_transport_abstraction.py  test_bios_upgrade_fix.py  test_ip_functionality.py
interactive-credentials/: index.html
ip-address-support/: index.html
llm_files/: NORNIR_INVENTORY.md  heuristic_state_diff_design.md
multi-vendor-support/: index.html
output-modes/: index.html
overrides/partials/: logo.html
platform-compatibility/: index.html
reference/api/: index.html
reference/cli/: index.html
results/: index.html
running-commands/: index.html
schemas/: device-config.schema.json  groups-config.schema.json  network-config.schema.json
scripts/: build.sh  compliance_report.py  demo_schema_workflow.py  generate_cli_docs.py  generate_config_schema.py  generate_platform_docs.py  generate_schema_files.py  lab_validation.py  lib_demo_networka_programmatic.py  ping_test_example.py  pre-release-check.sh  release.sh  test-actions-locally.sh  test-like-ci.sh  test-local-install.sh  update-secrets-baseline.sh  update_completions.py  validate_color_themes.py
search/: search_index.json
shell-completion/: index.html
shell_completion/: bash_completion_README.md  bash_completion_netkit.sh  bash_completion_nw.sh  fish_completion_netkit.fish  fish_completion_nw.fish  install_completion.sh  zsh_completion_netkit.zsh
src/network_toolkit/: __about__.py  __init__.py  banner.py  cli.py  client.py  config.py  credentials.py  device.py  introspection.py  ip_device.py  results_enhanced.py  runtime.py  sequence_manager.py  session_pool.py
tests/: conftest.py  test_api_backup.py  test_api_diff.py  test_api_download.py  test_api_firmware.py  test_api_info.py  test_api_list.py  test_api_platforms.py  test_api_run.py  test_api_upload.py  test_backup_integration.py  test_banner.py  test_builtin_sequences_common_yaml.py  test_cisco_backup_operations.py  test_cli.py  test_cli_inventory_options.py  test_cli_real_config.py  test_cli_transport.py  test_client_session_reuse.py  test_color_system.py  test_command_context_integration.py  test_commands_coverage.py  test_commands_coverage_fixed.py  test_commands_integration.py  test_common_errors.py  test_common_resolver.py  test_complete.py  test_config.py  test_config_backup.py  test_config_context.py  test_config_init.py  test_config_init_impl.py  test_config_init_interactive.py  test_config_real_world.py  test_config_source_dir.py  test_config_subcommands.py  test_config_unified.py  test_config_update.py  test_credentials.py  test_decorators.py  (+70 more)
tests/api/: test_diff_parallel.py
tests/cli/: test_command_config.py  test_help_integration.py  test_metadata.py
tests/fixtures/: output_testing.py
tmux-ssh/: index.html
transport/: index.html
troubleshooting/: index.html
vendors/: index.html
vendors/arista/: index.html
vendors/cisco/: index.html
vendors/juniper/: index.html
vendors/mikrotik/: index.html
(+136 files in other folders)
